fix usp alignment

--- a/resources/assets/styles/layouts/_homepage.scss
+++ b/resources/assets/styles/layouts/_homepage.scss
@@ -54,8 +54,6 @@
 
 #usps {
 	.usps-item {
-		margin-bottom: $default_spacing;
-
 		img {
 			width: 20px;
 			height: 20px;
